[gd_scene load_steps=7 format=3 uid="uid://d6tqe2cmgnfv"]

[ext_resource type="Script" path="res://scenes/environment/arc.gd" id="1_otunj"]
[ext_resource type="Shader" path="res://shaders/plasmaArc.gdshader" id="2_jpfic"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x6mvt"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("2_jpfic")
shader_parameter/color1 = Color(0.392157, 0, 1, 1)
shader_parameter/color2 = Color(1, 0, 0.4, 1)
shader_parameter/emissionMultiplier = 1.0
shader_parameter/fresnelAmount = 20.0
shader_parameter/origin = Vector3(0.5, 0, 0)
shader_parameter/contactPoint = Vector3(1.5, 0, 0)

[sub_resource type="Curve3D" id="Curve3D_k1fo2"]
resource_local_to_scene = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0.5, 0, 0, 0, 0, 0, 0, 0, 0, 0.713469, -0.0502448, 0.031178, 0, 0, 0, 0, 0, 0, 0.935879, 0.0383286, -0.0694669, 0, 0, 0, 0, 0, 0, 1.10193, 0.0110095, -0.0695751, 0, 0, 0, 0, 0, 0, 1.27156, 0.0447065, 0.0444466, 0, 0, 0, 0, 0, 0, 1.5, 0, 0),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0)
}
point_count = 6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wyko5"]
albedo_color = Color(1, 0, 0.545098, 1)
emission_enabled = true
emission = Color(1, 0, 0.545098, 1)
emission_energy_multiplier = 8.0

[sub_resource type="SphereMesh" id="SphereMesh_qxbap"]
material = SubResource("StandardMaterial3D_wyko5")
radius = 0.003
height = 0.005

[node name="arc" type="StaticBody3D"]
script = ExtResource("1_otunj")
lineRadius = 0.03
updatePerTime = 0.15
arcOffsetFraction = 0.35

[node name="MeshInstance3D" type="CSGPolygon3D" parent="."]
polygon = PackedVector2Array(0, 0.03, 0.00104698, 0.0299817, 0.00209269, 0.0299269, 0.00313585, 0.0298357, 0.00417519, 0.029708, 0.00520945, 0.0295442, 0.00623735, 0.0293444, 0.00725766, 0.0291089, 0.00826912, 0.0288379, 0.00927051, 0.0285317, 0.0102606, 0.0281908, 0.0112382, 0.0278155, 0.0122021, 0.0274064, 0.0131511, 0.0269638, 0.0140841, 0.0264884, 0.015, 0.0259808, 0.0158976, 0.0254414, 0.0167758, 0.0248711, 0.0176336, 0.0242705, 0.0184698, 0.0236403, 0.0192836, 0.0229813, 0.0200739, 0.0222943, 0.0208398, 0.0215802, 0.0215802, 0.0208398, 0.0222943, 0.0200739, 0.0229813, 0.0192836, 0.0236403, 0.0184698, 0.0242705, 0.0176336, 0.0248711, 0.0167758, 0.0254414, 0.0158976, 0.0259808, 0.015, 0.0264884, 0.0140841, 0.0269638, 0.0131511, 0.0274064, 0.0122021, 0.0278155, 0.0112382, 0.0281908, 0.0102606, 0.0285317, 0.00927051, 0.0288379, 0.00826912, 0.0291089, 0.00725766, 0.0293444, 0.00623735, 0.0295442, 0.00520945, 0.029708, 0.00417519, 0.0298357, 0.00313585, 0.0299269, 0.00209269, 0.0299817, 0.00104698, 0.03, 1.83691e-18, 0.0299817, -0.00104698, 0.0299269, -0.00209269, 0.0298357, -0.00313585, 0.029708, -0.00417519, 0.0295442, -0.00520945, 0.0293444, -0.00623735, 0.0291089, -0.00725766, 0.0288379, -0.00826912, 0.0285317, -0.00927051, 0.0281908, -0.0102606, 0.0278155, -0.0112382, 0.0274064, -0.0122021, 0.0269638, -0.0131511, 0.0264884, -0.0140841, 0.0259808, -0.015, 0.0254414, -0.0158976, 0.0248711, -0.0167758, 0.0242705, -0.0176336, 0.0236403, -0.0184698, 0.0229813, -0.0192836, 0.0222943, -0.0200739, 0.0215802, -0.0208398, 0.0208398, -0.0215802, 0.0200739, -0.0222943, 0.0192836, -0.0229813, 0.0184698, -0.0236403, 0.0176336, -0.0242705, 0.0167758, -0.0248711, 0.0158976, -0.0254414, 0.015, -0.0259808, 0.0140841, -0.0264884, 0.0131511, -0.0269638, 0.0122021, -0.0274064, 0.0112382, -0.0278155, 0.0102606, -0.0281908, 0.00927051, -0.0285317, 0.00826912, -0.0288379, 0.00725766, -0.0291089, 0.00623735, -0.0293444, 0.00520945, -0.0295442, 0.00417519, -0.029708, 0.00313585, -0.0298357, 0.00209269, -0.0299269, 0.00104698, -0.0299817, 3.67382e-18, -0.03, -0.00104698, -0.0299817, -0.00209269, -0.0299269, -0.00313585, -0.0298357, -0.00417519, -0.029708, -0.00520945, -0.0295442, -0.00623735, -0.0293444, -0.00725766, -0.0291089, -0.00826912, -0.0288379, -0.00927051, -0.0285317, -0.0102606, -0.0281908, -0.0112382, -0.0278155, -0.0122021, -0.0274064, -0.0131511, -0.0269638, -0.0140841, -0.0264884, -0.015, -0.0259808, -0.0158976, -0.0254414, -0.0167758, -0.0248711, -0.0176336, -0.0242705, -0.0184698, -0.0236403, -0.0192836, -0.0229813, -0.0200739, -0.0222943, -0.0208398, -0.0215802, -0.0215802, -0.0208398, -0.0222943, -0.0200739, -0.0229813, -0.0192836, -0.0236403, -0.0184698, -0.0242705, -0.0176336, -0.0248711, -0.0167758, -0.0254414, -0.0158976, -0.0259808, -0.015, -0.0264884, -0.0140841, -0.0269638, -0.0131511, -0.0274064, -0.0122021, -0.0278155, -0.0112382, -0.0281908, -0.0102606, -0.0285317, -0.00927051, -0.0288379, -0.00826912, -0.0291089, -0.00725766, -0.0293444, -0.00623735, -0.0295442, -0.00520945, -0.029708, -0.00417519, -0.0298357, -0.00313585, -0.0299269, -0.00209269, -0.0299817, -0.00104698, -0.03, -5.51073e-18, -0.0299817, 0.00104698, -0.0299269, 0.00209269, -0.0298357, 0.00313585, -0.029708, 0.00417519, -0.0295442, 0.00520945, -0.0293444, 0.00623735, -0.0291089, 0.00725766, -0.0288379, 0.00826912, -0.0285317, 0.00927051, -0.0281908, 0.0102606, -0.0278155, 0.0112382, -0.0274064, 0.0122021, -0.0269638, 0.0131511, -0.0264884, 0.0140841, -0.0259808, 0.015, -0.0254414, 0.0158976, -0.0248711, 0.0167758, -0.0242705, 0.0176336, -0.0236403, 0.0184698, -0.0229813, 0.0192836, -0.0222943, 0.0200739, -0.0215802, 0.0208398, -0.0208398, 0.0215802, -0.0200739, 0.0222943, -0.0192836, 0.0229813, -0.0184698, 0.0236403, -0.0176336, 0.0242705, -0.0167758, 0.0248711, -0.0158976, 0.0254414, -0.015, 0.0259808, -0.0140841, 0.0264884, -0.0131511, 0.0269638, -0.0122021, 0.0274064, -0.0112382, 0.0278155, -0.0102606, 0.0281908, -0.00927051, 0.0285317, -0.00826912, 0.0288379, -0.00725766, 0.0291089, -0.00623735, 0.0293444, -0.00520945, 0.0295442, -0.00417519, 0.029708, -0.00313585, 0.0298357, -0.00209269, 0.0299269, -0.00104698, 0.0299817)
mode = 2
path_node = NodePath("../Path3D")
path_interval_type = 1
path_interval = 1.0
path_simplify_angle = 0.0
path_rotation = 2
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false
smooth_faces = true
material = SubResource("ShaderMaterial_x6mvt")

[node name="Path3D" type="Path3D" parent="."]
curve = SubResource("Curve3D_k1fo2")

[node name="handle1" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0)

[node name="handle2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0)

[node name="CPUParticles3D" type="CPUParticles3D" parent="handle2"]
amount = 20
lifetime = 0.15
mesh = SubResource("SphereMesh_qxbap")
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 1.5
